Fixed spacing around blog-content tag to match about-content tag.

--- a/about-us.css
+++ b/about-us.css
@@ -166,7 +166,7 @@ h1 {
 }
 h2{
     text-align: center;
-    padding: 2%;
+    padding: 3% 0;
     font-size: 5rem;
     color: var(--greyish);
 }
